package dao;

import model.Client;

public class ClientDAO extends AbstractDAO<Client> {
}
