package dao;

import model.Purchase;

public class PurchaseDAO extends AbstractDAO<Purchase> {
}
